Edit with evolution

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,10 @@
 
 play.crypto.secret = "changeme"
 
+play.modules {
+    enabled += jobs.SchemaGenerationModule
+}
+
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
   #db.default.enabled = false
